Fix #132 Gap in footer lines due to changes in webtrees
fisharebest/webtrees@5712865df1d46841df931c4993e5c99943abdf90

--- a/src/sass/theme/_footer.scss
+++ b/src/sass/theme/_footer.scss
@@ -44,6 +44,10 @@
                 margin-top: 0;
             }
         }
+
+        .wt-footer {
+            margin: 0 !important;
+        }
     }
 
     .wt-footer-powered-by {
